--- a/ui/package.json
+++ b/ui/package.json
@@ -63,6 +63,7 @@
     "sort-paths": "1.1.1",
     "trim-newlines": "^3.0.1",
     "tslib": "^2.0.0",
+    "ua-parser-js": "^0.7.33",
     "validator": "^13.7.0",
     "xregexp": "^4.3.0",
     "zone.js": "~0.11.4"
